--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "name": "desafio-5-trilhas",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "nodemon src/server.js",
     "migrate":"npx sequelize-cli db:migrate ",
