--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "migrate":"npx sequelize-cli db:migrate ",
     "vercel-build":"npm run migrate"
   },
